--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "advanced-timeout",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "An advanced, pausable, timeout module for javascript",
   "main": "dist/index.js",
   "directories": {
@@ -17,7 +17,11 @@
   "keywords": [
     "timeout",
     "pause",
-    "settimeout"
+    "settimeout",
+    "pausable timeout",
+    "pause timeout",
+    "stop timeout",
+    "advanced"
   ],
   "author": "Eden Ben Shoshan",
   "license": "ISC",
